--- a/main/static/css/login.css
+++ b/main/static/css/login.css
@@ -91,3 +91,9 @@ p {
 {
     color: black;
 }
+
+.navbar-nav .nav-item:hover .nav-link,
+.navbar-nav .nav-item.active .nav-link,
+.navbar-nav .nav-item:focus .nav-link {
+  border-bottom: 2px solid black;
+}
