--- a/main/templates/nav.html
+++ b/main/templates/nav.html
@@ -2,7 +2,7 @@
 <header>
 <nav class="navbar navbar-expand-lg bg-white">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#"><img class="logo" src="{% static 'images/ll.jpg' %}" alt=""></a>
+      <a class="navbar-brand" href="{% url 'furniture:home' %}"><img class="logo" src="{% static 'images/ll.jpg' %}" alt=""></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -28,8 +28,12 @@
           <form class="d-flex me-2" role="search"> 
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
           </form>
-          
-          <li class="nav-item dropdown ms-auto " > 
+          <li class="nav-item ms-auto d2">
+            <a class="nav-link active" href=""><span class="material-symbols-outlined  d1">
+              shopping_cart
+              </span></a>
+          </li>
+          <li class="nav-item dropdown  " > 
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               <span class="material-symbols-outlined d">
                 person
