--- a/main/static/css/category.css
+++ b/main/static/css/category.css
@@ -43,7 +43,7 @@ img
 {
   padding-bottom: 3px;
   font-size: 18px;
-  color: #cf9362;
+  /* color: #cf9362; */
 
 }
 
@@ -53,4 +53,79 @@ img
   width: 300px; /* Adjust the width of the zoom container */
   height: 300px; /* Adjust the height of the zoom container */
   position: relative;
+}
+
+.cc img {
+  width: 100%; /* Make the image fill the container */
+  height: 100%; /* Make the image fill the container */
+  object-fit: cover; /* Maintain the aspect ratio and cover the container */
+}
+
+.wi
+{
+  position: absolute;
+  top: 10px;
+  right: 20px;
+  font-size: 25px;
+  color:white;
+}
+
+
+.footer {
+  background-color: #f5f5f5; /* Choose a suitable background color */
+  padding: 30px 0;
+  color: #333; /* Choose a suitable text color */
+}
+
+.footer h4 {
+  color: #555; /* Choose a suitable heading color */
+}
+
+.footer ul {
+  list-style: none;
+  padding: 0;
+}
+
+.footer ul li {
+  margin-bottom: 10px;
+}
+
+.footer .ficn {
+font-size: 25px;
+}
+
+.foo {
+display: flex;
+
+}
+.font
+{
+font-size: 25px;
+}
+@media screen and (max-width: 576px) {
+  .footer {
+    text-align: center;
+    margin-left: 15%;
+    background-color: #f5f5f5; /* Choose a suitable background color */
+    padding: 30px 0;
+    color: #333; /* Choose a suitable text color */
+  }
+
+  .footer h4 {
+    color: #555; /* Choose a suitable heading color */
+  }
+
+  .footer ul {
+    list-style: none;
+    padding: 0;
+  }
+
+  .footer ul li {
+    margin-bottom: 10px;
+  }
+
+.footer .ficn {
+font-size: 25px;
+}
+
 }
