--- a/main/static/css/index.css
+++ b/main/static/css/index.css
@@ -206,3 +206,147 @@ img{
     {
       margin-top: 2%;
     }
+
+    .footer {
+      background-color: #f5f5f5; /* Choose a suitable background color */
+      padding: 30px 0;
+      color: #333; /* Choose a suitable text color */
+    }
+
+    .footer h4 {
+      color: #555; /* Choose a suitable heading color */
+    }
+
+    .footer ul {
+      list-style: none;
+      padding: 0;
+    }
+
+    .footer ul li {
+      margin-bottom: 10px;
+    }
+
+.footer .ficn {
+  font-size: 25px;
+}
+
+.foo {
+  display: flex;
+  
+}
+.font
+{
+  font-size: 25px;
+}
+
+@media screen and (max-width: 576px) {
+
+  #image-container {
+
+    position: relative;
+    overflow: hidden;
+    height: 250px;
+    margin-left: 10%;
+
+
+  }
+
+  .image-overlay::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.1); /* Set the background color and adjust the opacity */
+    z-index: 1;
+  }
+
+  #content-above {
+    position: static;
+    margin-top: 3cm;
+    margin-left: 6.5cm;
+    /* top: 25%;
+    left: 55%; */
+    transform: translate(-50%, -50%);
+    color: white;
+    z-index: 2;
+    text-align: center;
+    text-shadow: 1px 1px 1px rgb(179, 170, 170); /* Add a black border around the letters */
+  
+  }
+
+  .c1 
+  {
+    margin-top: 5%;
+    margin-left: 17%;
+    margin-bottom: 2%;
+  }
+  .c 
+  {
+    margin-top: 8%;
+    margin-left: 5%;
+  }
+  .con 
+  {
+    font-size: 20px;
+    margin-top: 5%;
+    margin-left: 15%;
+  }
+  
+  .b2
+  {
+    margin-left: 20%;
+    margin-bottom: 5%;
+    letter-spacing: 3px;
+    padding: 15px 30px ;
+    background-color:black;
+    font-size: 18px;
+    color: white;
+    border: 2px solid rgb(249, 249, 249);
+    cursor: pointer;
+    transition: transform 0.5s ease;
+    }
+    
+    
+    .b2:hover {
+    transform: translateX(10px); 
+    background-color:transparent;
+    color:black;
+    border: 1px solid black;
+    }
+
+    .video 
+    {
+      margin-top: 2%;
+      
+
+    }
+
+    .footer {
+      text-align: center;
+      margin-left: 15%;
+      background-color: #f5f5f5; /* Choose a suitable background color */
+      padding: 30px 0;
+      color: #333; /* Choose a suitable text color */
+    }
+
+    .footer h4 {
+      color: #555; /* Choose a suitable heading color */
+    }
+
+    .footer ul {
+      list-style: none;
+      padding: 0;
+    }
+
+    .footer ul li {
+      margin-bottom: 10px;
+    }
+
+.footer .ficn {
+  font-size: 25px;
+}
+
+
+}
