--- a/main/static/css/login.css
+++ b/main/static/css/login.css
@@ -97,3 +97,65 @@ p {
 .navbar-nav .nav-item:focus .nav-link {
   border-bottom: 2px solid black;
 }
+
+
+.footer {
+    background-color: #f5f5f5; /* Choose a suitable background color */
+    padding: 30px 0;
+    color: #333; /* Choose a suitable text color */
+    margin-top: 5%;
+  }
+
+  .footer h4 {
+    color: #555; /* Choose a suitable heading color */
+  }
+
+  .footer ul {
+    list-style: none;
+    padding: 0;
+  }
+
+  .footer ul li {
+    margin-bottom: 10px;
+  }
+
+.footer .ficn {
+font-size: 25px;
+}
+
+.foo {
+display: flex;
+
+}
+.font
+{
+font-size: 25px;
+}
+
+@media screen and (max-width: 576px) {
+    .footer {
+      text-align: center;
+      margin-left: 15%;
+      background-color: #f5f5f5; /* Choose a suitable background color */
+      padding: 30px 0;
+      color: #333; /* Choose a suitable text color */
+    }
+  
+    .footer h4 {
+      color: #555; /* Choose a suitable heading color */
+    }
+  
+    .footer ul {
+      list-style: none;
+      padding: 0;
+    }
+  
+    .footer ul li {
+      margin-bottom: 10px;
+    }
+  
+  .footer .ficn {
+  font-size: 25px;
+  }
+  
+  }
