--- a/main/templates/login.html
+++ b/main/templates/login.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>PROJECT</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" >
@@ -41,13 +42,69 @@
             <center><input type="submit"> </center>
         </div>
     </form>
-    
-    
-    
-    
     {% for msg in messages %}
     {{msg}}
     {% endfor %}
+    
+    
+    <footer class="footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-2">
+            <h5>Explore</h5>
+            <p>Dining</p>
+          <p>Bedroom</p>
+          <p>Office</p>
+          <p>Decor</p>
+          <p>Last Chance</p>
+          <p>Blog</p>
+          </div>
+          <div class="col-lg-2">
+            <h5>Services</h5>
+            <ul>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">Shop</a></li>
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+          </div>
+          <div class="col-lg-2">
+            <h5>Support</h5>
+            <p>Stay connected on <br>social media:</p>
+          </div>
+          <div class="col-lg-2">
+            <h1><span class="material-symbols-outlined">
+              nest_clock_farsight_analog
+              </span></h1>
+            <h5>Immediate Availability</h5>
+            <p>On select products</p>
+          </div>
+          <div class="col-lg-2">
+            <h3><span class="material-symbols-outlined">
+              scene
+              </span></h3>
+            <h5>Complimentary Interior Design</h5>
+            <p>When you shop in store</p>
+          </div>
+          <div class="col-lg-2">
+            <h3><span class="material-symbols-outlined ">
+              volunteer_activism
+              </span></h3>
+            <h5>White Glove Delivery</h5>
+            <p>When you shop in store</p>
+          </div>
+        </div>
+        <div class="row foo">
+          <div class="col-lg-12 text-center">
+            <div class="font"><i class="bi bi-facebook ms-3"></i><i class="bi bi-instagram ms-3"></i><i class="bi bi-pinterest ms-3"></i></div>
+          </div>
+        </div>
+      </div>
+    </footer>
+    
+    
+    
+   
     
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
