--- a/main/templates/category.html
+++ b/main/templates/category.html
@@ -64,10 +64,10 @@
               <div class="col-lg-2">
                 <h5>Services</h5>
                 <ul>
-                  <li><a href="#">Home</a></li>
+                  <li><a href="{% url 'furniture:home' %}">Home</a></li>
                   <li><a href="#">Shop</a></li>
                   <li><a href="#">About Us</a></li>
-                  <li><a href="#">Contact</a></li>
+                  <li><a href="{% url 'furniture:store' %}">Contact</a></li>
                 </ul>
               </div>
               <div class="col-lg-2">
