--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -65,7 +65,7 @@
           <a href="{% url 'furniture:consult' %}"><button class="b2">BOOK FREE CONSULTATION</button></a>
         </div>
         <div class="col-lg-6">
-          <video  width="640" height="360" controls>
+          <video class="video"  width="640" height="360" controls>
             <source class="video" src="{% static 'images/Home Furniture Ad Video Template (Editable).mp4' %}" type="video/mp4">
            
             Your browser does not support the video tag.
