--- a/main/templates/login.html
+++ b/main/templates/login.html
@@ -26,14 +26,14 @@
             <div class="row mb-3">
                 <label for="username" class="col-sm-2 col-form-label u">Username</label>
                 <div class="col-sm-10">
-                <input type="text" class="form-control" name="username" placeholder="username">
+                <input type="text" class="form-control" name="username" placeholder="username"  required>
             </div>
            </div>
     
             <div class="row mb-3">
                 <label for="inputPassword3" class="col-sm-2 col-form-label p">Password</label>
                 <div class="col-sm-10">
-                  <input type="password" class="form-control"  name="password" placeholder="Password" id="inputPassword3">
+                  <input type="password" class="form-control"  name="password" placeholder="Password" id="inputPassword3" required>
                 </div>
             </div>
                 <a href=""><p class="f">forget password</p></a>
