--- a/main/static/css/cart.css
+++ b/main/static/css/cart.css
@@ -19,6 +19,8 @@ img
     font-size: 12px;
     text-align: center;
 }
+
+
 .t1 
 {
     font-size: 12px;
@@ -176,7 +178,11 @@ img
     padding: 30px 0;
     color: #333; /* Choose a suitable text color */
     margin-top: 5%;
+    margin-left: 3cm;
   }
+  .footer .container-fluid {
+    width: 100%; /* Set the width of the container-fluid to 100% */
+}
 
   .footer h4 {
     color: #555; /* Choose a suitable heading color */
@@ -345,4 +351,119 @@ flex-direction: row;}
 
  
 }
+}
+
+@media screen and (min-width: 768px) 
+{
+
+.c1 
+{
+    margin-top: 5%;
+   margin-left: 1cm;
+}
+
+.t 
+{
+    font-size: 14px;
+    text-align: center;
+}
+
+
+.t1 
+{
+    font-size: 14px;
+    text-align: center;
+    letter-spacing: 3px;
+}
+
+.line 
+{
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+    width: 25cm;
+    margin-right: 1%;
+    
+}
+
+.c2 
+{
+    margin-top: 2%;
+    margin-left: 1cm;
+}
+.image 
+{
+    height: 120px;
+    width: 120px;
+    margin-left: 4.5cm;
+   
+}
+.in 
+{
+    margin-left: 3.5cm;
+    margin-top: 25px;
+}
+
+
+.line2 
+{
+    display: flex;
+    flex-direction: row;
+    margin-left: 0cm;
+    margin-top: 15px;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    padding-left: 18px;
+    padding-top: 14px;
+    margin-right: 1.8cm;   
+
+}
+.pr 
+{
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: -1px;
+}
+.rm 
+{
+    letter-spacing: 1px;
+    /* margin-left: 1cm; */
+    margin-top: 10px;
+    border-bottom: 2px solid rgb(0, 0, 0);
+    margin-right: 10px;
+    margin-left: 8%;
+    cursor: pointer;
+    transition: border-bottom 0.1s ease;
+}
+
+.line3
+{
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+    width: 25cm;
+    margin-left: 4.5cm;
+    margin-top: 20px;
+}
+
+.b2
+  {
+    margin-left: 24.5cm;
+    margin-top: 20px;
+    letter-spacing: 3px;
+    padding: 15px 30px ;
+    background-color:black;
+    font-size: 13px;
+    color: white;
+    border: 2px solid rgb(249, 249, 249);
+    cursor: pointer;
+    transition: transform 0.5s ease;
+
+
+    }
+    
+    
+    .b2:hover {
+    transform: translateX(10px); 
+    background-color:transparent;
+    color:black;
+    border: 1px solid black;
+    }
+    
+ 
 }
