--- a/main/templates/register.html
+++ b/main/templates/register.html
@@ -23,39 +23,39 @@
             <h3 class="l">REGISTER</h3>
     
             <div class="row mb-3">
-                    <label for="first_name" class=" col-sm-2 form-label">First name</label>
+                    <label for="first_name" class=" col-sm-2 form-label" required>First name</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" name="first_name" placeholder="First name" aria-label="First name">
+                    <input type="text" class="form-control" name="first_name" placeholder="First name" aria-label="First name" required>
                 </div>
             </div>
             <div class="row mb-3">
-                    <label for="last_name" class="col-sm-2 col-form-label">Last name</label>
+                    <label for="last_name" class="col-sm-2 col-form-label" >Last name</label>
                     <div class="col-sm-10">
-                    <input type="text" class="form-control" name="last_name" placeholder="Last name" aria-label="Last name">
+                    <input type="text" class="form-control" name="last_name" placeholder="Last name" aria-label="Last name" required>
                 </div>
             </div>
             <div class="row mb-3">
                 <label for="username" class="col-sm-2 col-form-label">User name</label>
                 <div class="col-sm-10">
-                <input type="text" class="form-control" name="username" placeholder="username">
+                <input type="text" class="form-control" name="username" placeholder="username" required>
             </div>
             </div>
             <div class="row mb-3">
                 <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
                 <div class="col-sm-10">
-                  <input type="email" class="form-control" name="email" placeholder="Example@mail.com" id="inputEmail3">
+                  <input type="email" class="form-control" name="email" placeholder="Example@mail.com" id="inputEmail3" required>
                 </div>
             </div>
             <div class="row mb-3">
                 <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
                 <div class="col-sm-10">
-                  <input type="password" class="form-control"  name="password" placeholder="Password" id="inputPassword3">
+                  <input type="password" class="form-control"  name="password" placeholder="Password" id="inputPassword3" required>
                 </div>
             </div>
             <div class="row mb-3">
                 <label for="inputPassword3" class="col-sm-2 col-form-label">Conform Password</label>
                 <div class="col-sm-10">
-                  <input type="password" class="form-control" name="c_password" placeholder="conform password" id="inputPassword3">
+                  <input type="password" class="form-control" name="c_password" placeholder="conform password" id="inputPassword3" required>
                 </div>
             </div>
         </div>
