--- a/main/templates/details.html
+++ b/main/templates/details.html
@@ -44,9 +44,9 @@
                 <div class="icons"><i class="bi bi-facebook i"></i><i class="bi bi-twitter i"></i><i class="bi bi-pinterest i"></i><i class="bi bi-snapchat i"></i><i class="bi bi-linkedin i"></i><i class="bi bi-whatsapp i"></i><i class="bi bi-envelope i"></i></div>
             </div>
             <div class="share-icons">
-            <p class=" w">Product available in store only</p><span class="material-symbols-outlined wish ms-auto">
+            <!-- <p class=" w">Product available in store only</p><span class="material-symbols-outlined wish ms-auto">
                 favorite
-                </span>
+                </span> -->
         </div>
 
         {% if products.stock == 0 %}
@@ -67,7 +67,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-2">
-            <h5>Explore</h5>
+            <h5><b>Explore</b></h5>
             <p>Dining</p>
           <p>Bedroom</p>
           <p>Office</p>
@@ -76,16 +76,16 @@
           <p>Blog</p>
           </div>
           <div class="col-lg-2">
-            <h5>Services</h5>
+            <h5><b>Services</b></h5>
             <ul>
-              <li><a href="#">Home</a></li>
-              <li><a href="#">Shop</a></li>
-              <li><a href="#">About Us</a></li>
-              <li><a href="#">Contact</a></li>
+              <li><a class="lin" href="#">Home</a></li>
+              <li><a class="lin" href="#">Shop</a></li>
+              <li><a class="lin" href="#">About Us</a></li>
+              <li><a class="lin" href="#">Contact</a></li>
             </ul>
           </div>
           <div class="col-lg-2">
-            <h5>Support</h5>
+            <h5><b>Support</b></h5>
             <p>Stay connected on <br>social media:</p>
           </div>
           <div class="col-lg-2">
