--- a/main/static/css/cart.css
+++ b/main/static/css/cart.css
@@ -94,7 +94,7 @@ img
     border-bottom: 2px solid rgb(0, 0, 0);;
     margin-right: 2.3cm;
     cursor: pointer;
-    transition: border-bottom 0.1s ease;hidden;
+    transition: border-bottom 0.1s ease; 
 }
 
 .rm:hover,
@@ -212,258 +212,322 @@ font-size: 25px;
 
 
 
-@media screen and (max-width: 576px) {
-
-    .line 
+@media (max-width: 576px) {
+.line 
 {
-    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-    width: 14cm;
-    margin-left:.3cm;
-}
-
-.image 
-{
-    height: 120px;
-    width: 120px;
-    margin-left: 5.5cm;
+    border-bottom: none;
    
 }
-.t 
+.t,.t1 
 {
-    font-size: 12px;
-    text-align: center;
-}
-.t1 
-{
-    font-size: 12px;
-    text-align: center;
-    letter-spacing: 3px;
-}
-.c1 
-{margin-top: 5%;
-display: flex;
-flex-direction: row;}
-.name 
-{    letter-spacing: 3px;
-
-    /* color: #cf9362; */
-    font-size: 12px;
+    /* margin-bottom: 50px; */
+    /* margin-right: 20px; */
+    font-size: 0px;
 }
 
-.n 
-{
-    /* color: #cf9362; */
-    font-size: 14px;
-
-}
-.line2 
-{
-    display: flex;
-    flex-direction: row;
-    margin-left: 3cm;
-    margin-top: 15px;
-    border: 1px solid rgba(0, 0, 0, 0.2);
-    padding-left: 18px;
-    padding-top: 14px;
-    margin-right: 8.5cm;   
-
-}
-.pr 
-{
-    padding-left: 10px;
-    padding-right: 10px;
-    padding-bottom: -1px;
-}
-.rm 
-{
-    letter-spacing: 1px;
-    margin-left: 3.2cm;
-    margin-top: 10px;
-    border-bottom: 2px solid rgb(0, 0, 0);;
-    margin-right: 2.3cm;
-    cursor: pointer;
-    transition: border-bottom 0.1s ease;hidden;
-}
-
-.rm:hover,
-.rm.active,
-.rm:focus {
-  border-bottom: 2px solid rgba(0, 0, 0, 0); /* Transparent border */
-}
-.tot 
-{
-    margin-left: 3.8cm;
-    margin-top: 35px;
-    font-size: 18px;
-}
 .line3
 {
-    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-    width: 14cm;
-    margin-left: .3cm;
-    margin-top: 30px;
-
-
- 
+    border-bottom:1px solid black;
+    margin: 0;
+    width: 100%;
+    margin-top: 15px;
 }
+
+.in 
+{
+    margin: 0;
+    margin-top: 50px;
+}
+
 .total
 {
-    margin-left: 8cm;
-    margin-top: 20px;
+    margin: 0;
+    text-align: center;
 }
 .b2
   {
-    margin-left: 8cm;
-    margin-top: 20px;
+    margin: 0;
     letter-spacing: 3px;
     padding: 15px 30px ;
     background-color:black;
-    font-size: 18px;
+    font-size: 15px;
     color: white;
     border: 2px solid rgb(249, 249, 249);
     cursor: pointer;
     transition: transform 0.5s ease;
-
-
+    margin-left: 30%;
+    margin-top: 10px;
+    }
+    .image 
+    {
+        height: 100%;
+        width: 100%;
+        margin: 0;
+        margin-top: 10px;
+       
     }
     
-    
-    .b2:hover {
-    transform: translateX(10px); 
-    background-color:transparent;
-    color:black;
-    border: 1px solid black;
-    }
-
-    .link-active {
-        color: black;
-        text-decoration: none; /* Remove underline */
+    .name 
+{    letter-spacing: 3px;
+    font-size: 12px;
+    margin: 0;
 }
 
-.minus,.plus
+.line2 
 {
-    color: black;
+    display: flex;
+    flex-direction: row;
+    margin-left: 10%;
+    margin-top: 15px;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    padding-left: 18px;
+    padding-top: 14px;
+    margin-right: 50%;   
+
 }
-.under
-
+.rm 
 {
-    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-
- 
-}
-}
-
-@media screen and (min-width: 768px) 
-{
-
-.c1 
-{
-    margin-top: 5%;
-   margin-left: 1cm;
-}
-
-.t 
-{
-    font-size: 14px;
-    text-align: center;
-}
-
-
-.t1 
-{
-    font-size: 14px;
-    text-align: center;
-    letter-spacing: 3px;
-}
-
-.line 
-{
-    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-    width: 25cm;
-    margin-right: 1%;
-    
+    margin-left: 15%;
 }
 
 .c2 
 {
-    margin-top: 2%;
-    margin-left: 1cm;
-}
-.image 
-{
-    height: 120px;
-    width: 120px;
-    margin-left: 4.5cm;
-   
-}
-.in 
-{
-    margin-left: 3.5cm;
-    margin-top: 25px;
+    /* text-align: center; */
+    margin:0;
 }
 
-
-.line2 
+.tot 
 {
-    display: flex;
-    flex-direction: row;
-    margin-left: 0cm;
-    margin-top: 15px;
-    border: 1px solid rgba(0, 0, 0, 0.2);
-    padding-left: 18px;
-    padding-top: 14px;
-    margin-right: 1.8cm;   
-
+    
+    font-size: 0px;
 }
-.pr 
+.total 
 {
-    padding-left: 10px;
-    padding-right: 10px;
-    padding-bottom: -1px;
+    margin-top: 20px;
 }
-.rm 
+.footer 
 {
-    letter-spacing: 1px;
-    /* margin-left: 1cm; */
+    margin: 0;
+    text-align: center;
     margin-top: 10px;
-    border-bottom: 2px solid rgb(0, 0, 0);
-    margin-right: 10px;
-    margin-left: 8%;
-    cursor: pointer;
-    transition: border-bottom 0.1s ease;
+    padding: 0;
 }
 
-.line3
-{
-    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-    width: 25cm;
-    margin-left: 4.5cm;
-    margin-top: 20px;
 }
 
-.b2
-  {
-    margin-left: 24.5cm;
-    margin-top: 20px;
-    letter-spacing: 3px;
-    padding: 15px 30px ;
-    background-color:black;
-    font-size: 13px;
-    color: white;
-    border: 2px solid rgb(249, 249, 249);
-    cursor: pointer;
-    transition: transform 0.5s ease;
-
-
+@media (min-width:577px) and (max-width: 768px) {
+    .line 
+    {
+        border-bottom: none;
+       
+    }
+    .t,.t1 
+    {
+        /* margin-bottom: 50px; */
+        /* margin-right: 20px; */
+        font-size: 0px;
     }
     
-    
-    .b2:hover {
-    transform: translateX(10px); 
-    background-color:transparent;
-    color:black;
-    border: 1px solid black;
+    .line3
+    {
+        border-bottom:1px solid black;
+        margin: 0;
+        width: 100%;
+        margin-top: 15px;
     }
     
- 
+    .in 
+    {
+        margin: 0;
+        margin-top: 50px;
+    }
+    
+    .total
+    {
+        margin: 0;
+        text-align: center;
+    }
+    .b2
+      {
+        margin: 0;
+        letter-spacing: 3px;
+        padding: 15px 30px ;
+        background-color:black;
+        font-size: 15px;
+        color: white;
+        border: 2px solid rgb(249, 249, 249);
+        cursor: pointer;
+        transition: transform 0.5s ease;
+        margin-left: 30%;
+        margin-top: 10px;
+        }
+        .image 
+        {
+            height: 100%;
+            width: 100%;
+            margin: 0;
+            margin-top: 10px;
+           
+        }
+        
+        .name 
+    {    letter-spacing: 3px;
+        font-size: 18px;
+        margin: 0;
+    }
+    
+    .line2 
+    {
+        display: flex;
+        flex-direction: row;
+        margin-left: 10%;
+        margin-top: 15px;
+        border: 1px solid rgba(0, 0, 0, 0.2);
+        padding-left: 18px;
+        padding-top: 14px;
+        margin-right: 50%;   
+    
+    }
+    .rm 
+    {
+        margin-left: 15%;
+    }
+    
+    .c2 
+    {
+        text-align: center;
+        margin:0;
+    }
+    
+    .tot 
+    {
+        
+        font-size: 0px;
+    }
+    .total 
+    {
+        margin-top: 20px;
+    }
+    .footer 
+    {
+        margin: 0;
+        text-align: center;
+        margin-top: 10px;
+        padding: 0;
+    }
+    
+    }
+
+    @media (min-width:769px) and (max-width: 991px) {
+        .line 
+        {
+            border-bottom: none;
+           
+        }
+        .t,.t1 
+        {
+            /* margin-bottom: 50px; */
+            /* margin-right: 20px; */
+            font-size: 0px;
+        }
+        
+        .line3
+        {
+            border-bottom:1px solid black;
+            margin: 0;
+            width: 100%;
+            margin-top: 15px;
+        }
+        
+        .in 
+        {
+            margin: 0;
+            margin-top: 50px;
+        }
+        
+        .total
+        {
+            margin: 0;
+            text-align: center;
+        }
+        .b2
+          {
+            margin: 0;
+            letter-spacing: 3px;
+            padding: 15px 30px ;
+            background-color:black;
+            font-size: 15px;
+            color: white;
+            border: 2px solid rgb(249, 249, 249);
+            cursor: pointer;
+            transition: transform 0.5s ease;
+            margin-left: 30%;
+            margin-top: 10px;
+            }
+            .image 
+            {
+                height: 100%;
+                width: 100%;
+                margin: 0;
+                margin-top: 10px;
+               
+            }
+            
+            .name 
+        {    letter-spacing: 3px;
+            font-size: 18px;
+            margin: 0;
+        }
+        
+        .line2 
+        {
+            display: flex;
+            flex-direction: row;
+            margin-left: 10%;
+            margin-top: 15px;
+            border: 1px solid rgba(0, 0, 0, 0.2);
+            padding-left: 18px;
+            padding-top: 14px;
+            margin-right: 50%;   
+        
+        }
+        .rm 
+        {
+            margin-left: 15%;
+        }
+        
+        .c2 
+        {
+            text-align: center;
+            margin:0;
+        }
+        
+        .tot 
+        {
+            
+            font-size: 0px;
+        }
+        .total 
+        {
+            margin-top: 20px;
+        }
+        .footer 
+        {
+            margin: 0;
+            text-align: center;
+            margin-top: 10px;
+            padding: 0;
+        }
+        
+        }
+
+@media (min-width:992px)and (max-width:1200) {
+    .footer 
+        {
+            margin: 0;
+            text-align: center;
+            margin-top: 10px;
+            padding: 0;
+            
+        }
 }
