--- a/main/static/css/category.css
+++ b/main/static/css/category.css
@@ -61,14 +61,14 @@ img
   object-fit: cover; 
 }
 
-.wi
+/* .wi
 {
   position: absolute;
   top: 10px;
   right: 20px;
   font-size: 25px;
   color:white;
-}
+} */
 
 
 .footer {
@@ -102,52 +102,181 @@ display: flex;
 {
 font-size: 25px;
 }
-@media screen and (max-width: 576px) {
-  .footer {
-    text-align: center;
-    margin-left: 15%;
-    background-color: #f5f5f5; /* Choose a suitable background color */
-    padding: 30px 0;
-    color: #333; /* Choose a suitable text color */
-  }
-
-  .footer h4 {
-    color: #555; /* Choose a suitable heading color */
-  }
-
-  .footer ul {
-    list-style: none;
-    padding: 0;
-  }
-
-  .footer ul li {
-    margin-bottom: 10px;
-  }
-
-.footer .ficn {
-font-size: 25px;
+.link
+{
+  text-decoration: none;
+  color: rgb(23, 144, 225);
+}
+.link:hover{
+  color:black
 }
 
+@media (max-width: 576px) {
+  .cc 
+{
+  overflow: hidden;
+  width: auto; 
+  height: auto; 
+  position: relative;
+}
+.footer{
+  text-align: center;
+}
+.link
+{
+  text-decoration: none;
+  color: rgb(23, 144, 225);
+}
+.link:hover{
+  color:black
+}
 }
 
-@media screen and (min-width: 768px) 
-{ 
-
+@media (min-width:577px) and (max-width:768px)
+{
   .cc 
   {
     overflow: hidden;
-    width: 250px; /* Adjust the width of the zoom container */
-    height: 250px; /* Adjust the height of the zoom container */
+    width: 250px; 
+    height: 250px; 
     position: relative;
-    margin-left: 2%;
   }
-  
+
   .cc img {
-    width: 100%; /* Make the image fill the container */
-    height: 100%; /* Make the image fill the container */
+    width: 100%; 
+    height: 100%; 
     object-fit: cover; 
   }
-  
-  
+
+  .footer{
+    text-align: center;
+  }
+  .link
+{
+  text-decoration: none;
+  color: rgb(23, 144, 225);
+}
+.link:hover{
+  color:black
+}
 }
 
+@media (min-width:769px) and (max-width:991px)
+{
+  .cc 
+  {
+    overflow: hidden;
+    width: 350px; 
+    height: 350px; 
+    position: relative;
+  }
+
+  .cc img {
+    width: 100%; 
+    height: 100%; 
+    object-fit: cover; 
+  }
+
+  .footer{
+    text-align: center;
+    font-size: 20px;
+  }
+  .link
+{
+  text-decoration: none;
+  color: rgb(23, 144, 225);
+}
+.link:hover{
+  color:black
+}
+}
+
+@media (min-width:992px) and (max-width:1199px)
+{
+  .cc 
+  {
+    overflow: hidden;
+    width: 230px; 
+    height: 230px; 
+    position: relative;
+  }
+
+  .cc img {
+    width: 100%; 
+    height: 100%; 
+    object-fit: cover; 
+  }
+
+  .footer{
+    text-align: center;
+    /* font-size: 15px; */
+  }
+  .link
+{
+  text-decoration: none;
+  color: rgb(23, 144, 225);
+}
+.link:hover{
+  color:black
+}
+}
+
+@media (min-width:1200px) and (max-width:1400px)
+{
+  .cc 
+  {
+    overflow: hidden;
+    width: 270px; 
+    height: 270px; 
+    position: relative;
+  }
+
+  .cc img {
+    width: 100%; 
+    height: 100%; 
+    object-fit: cover; 
+  }
+
+  .footer{
+    text-align: center;
+    /* font-size: 15px; */
+  }
+  .link
+{
+  text-decoration: none;
+  color: rgb(23, 144, 225);
+}
+.link:hover{
+  color:black
+}
+}
+
+@media (min-width:1401px) and (max-width:2000px)
+{
+  .cc 
+  {
+    overflow: hidden;
+    width: 320px; 
+    height: 320px; 
+    position: relative;
+  }
+
+  .cc img {
+    width: 100%; 
+    height: 100%; 
+    object-fit: cover; 
+  }
+
+  .footer{
+    text-align: center;
+    font-size: 20px;
+  }
+  .link
+{
+  text-decoration: none;
+  color: rgb(23, 144, 225);
+}
+.link:hover{
+  color:black
+}
+}
