--- a/main/static/css/details.css
+++ b/main/static/css/details.css
@@ -152,50 +152,190 @@ display: flex;
 font-size: 25px;
 }
 
-@media screen and (max-width: 576px) {
-    .footer {
-      text-align: center;
-      margin-left: 15%;
-      background-color: #f5f5f5; /* Choose a suitable background color */
-      padding: 30px 0;
-      color: #333; /* Choose a suitable text color */
-    }
-  
-    .footer h4 {
-      color: #555; /* Choose a suitable heading color */
-    }
-  
-    .footer ul {
-      list-style: none;
-      padding: 0;
-    }
-  
-    .footer ul li {
-      margin-bottom: 10px;
-    }
-  
-  .footer .ficn {
-  font-size: 25px;
-  }
-  
-  }
-
-  @media screen and (min-width: 768px) 
-{
-
+@media (max-width: 576px) {
+   
   .length
-{   margin-left: 10px;
-    height: 500px;
-    width: 500px;
+{
+    height: 100%;
+    width: 100%;
+    margin: 0;
+
+}
+.c 
+{
+    text-align: center;
+}
+.w 
+{
+    text-align: center;
 }
 
-  .c1
+.b1,.b2 
 {
-   margin-left: 1%; 
+    font-size: 15px;
 }
+.footer 
+{
+    text-align: center;
+}
+.lin
+{
+text-decoration: none;
+}
+.lin:hover
+{
+    color: black;
+}
+  }
 
-.b1 
-{
-margin-left: 4px;
-}
-}
+  @media (min-width: 577px) and (max-width:768px) {
+   
+    .length
+  {
+      height: 100%;
+      width: 100%;
+      margin: 0;
+  
+  }
+  .c 
+  {
+      text-align: center;
+  }
+  .c1{margin-top: 10px;}
+  .w 
+  {
+      text-align: center;
+  }
+  
+  .b1,.b2 
+  {
+      font-size: 20px;
+  }
+  .footer 
+  {
+      text-align: center;
+  }
+  .lin
+  {
+  text-decoration: none;
+  }
+  .lin:hover
+  {
+      color: black;
+  }
+    }
+  
+    @media (min-width: 769px) and (max-width:991px) {
+   
+        .length
+      {
+          height: 100%;
+          width: 100%;
+          margin: 0;
+      
+      }
+      .c 
+      {
+          text-align: center;
+      }
+      .c1{margin-top: 10px;}
+      .w 
+      {
+          text-align: center;
+      }
+      
+      .b1,.b2 
+      {
+          font-size: 25px;
+      }
+      .footer 
+      {
+          text-align: center;
+      }
+      .lin
+      {
+      text-decoration: none;
+      }
+      .lin:hover
+      {
+          color: black;
+      }
+        }
+      
+        @media (min-width: 992px) and (max-width:1199px) {
+   
+            .length
+          {
+              height: 100%;
+              width: 100%;
+              margin: 0;
+          
+          }
+          .c 
+          {
+              text-align: center;
+          }
+          .c1{margin-top: 10px;
+                margin-left: 30px;}
+          .w 
+          {
+              text-align: center;
+          }
+          
+          .b1,.b2 
+          {
+              font-size: 10px;
+          }
+          .footer 
+          {
+              text-align: center;
+          }
+          .lin
+          {
+          text-decoration: none;
+          }
+          .lin:hover
+          {
+              color: black;
+          }
+            }
+
+            @media (min-width: 1200px) and (max-width:1400px) {
+   
+                .length
+              {
+                  height: 100%;
+                  width: 100%;
+                  margin: 0;
+              
+              }
+              .c 
+              {
+                  text-align: center;
+              }
+              .c1{margin-top: 10px;
+                    margin-left: 30px;}
+              .w 
+              {
+                  text-align: center;
+              }
+              
+              .b1,.b2 
+              {
+                  font-size: 15px;
+              }
+              .footer 
+              {
+                  text-align: center;
+              }
+              .lin
+              {
+              text-decoration: none;
+              }
+              .lin:hover
+              {
+                  color: black;
+              }
+                }
+          
+      
