--- a/main/static/css/index.css
+++ b/main/static/css/index.css
@@ -239,133 +239,492 @@ img{
   font-size: 25px;
 }
 
-@media screen and (max-width: 576px) {
-.video 
-{
-  width: 100%;
-}
+@media (max-width:576px) {
   #image-container {
 
     position: relative;
     overflow: hidden;
-    height: 250px;
-    margin-left: 10%;
+    height: 260px;
 
 
   }
 
-  .image-overlay::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
+#crop-image {
     width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.1); /* Set the background color and adjust the opacity */
-    z-index: 1;
-  }
+    height: auto;
+    display: block;
+    position: relative;
 
-  #content-above {
-    position: static;
-    margin-top: 3cm;
-    margin-left: 6.5cm;
-    /* top: 25%;
-    left: 55%; */
-    transform: translate(-50%, -50%);
-    color: white;
-    z-index: 2;
-    text-align: center;
-    text-shadow: 1px 1px 1px rgb(179, 170, 170); /* Add a black border around the letters */
-  
-  }
-
-  .c1 
-  {
-    margin-top: 5%;
-    margin-left: 17%;
-    margin-bottom: 2%;
-  }
-  .c 
-  {
-    margin-top: 8%;
-    margin-left: 5%;
-  }
-  .con 
-  {
-    font-size: 20px;
-    margin-top: 5%;
-    margin-left: 15%;
-  }
-  
-  .b2
-  {
-    margin-left: 20%;
-    margin-bottom: 5%;
-    letter-spacing: 3px;
-    padding: 15px 30px ;
-    background-color:black;
-    font-size: 18px;
-    color: white;
-    border: 2px solid rgb(249, 249, 249);
-    cursor: pointer;
-    transition: transform 0.5s ease;
-    }
     
-    
-    .b2:hover {
-    transform: translateX(10px); 
-    background-color:transparent;
-    color:black;
-    border: 1px solid black;
-    }
-
-    .video 
-    {
-      margin-top: 2%;
-      
-
-    }
-
-    .footer {
-      text-align: center;
-      margin-left: 15%;
-      background-color: #f5f5f5; /* Choose a suitable background color */
-      padding: 30px 0;
-      color: #333; /* Choose a suitable text color */
-    }
-
-    .footer h4 {
-      color: #555; /* Choose a suitable heading color */
-    }
-
-    .footer ul {
-      list-style: none;
-      padding: 0;
-    }
-
-    .footer ul li {
-      margin-bottom: 10px;
-    }
-
-.footer .ficn {
-  font-size: 25px;
 }
 
 
+
+#content-above {
+  position: absolute;
+  top: 45%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  z-index: 2;
+  text-align: center;
+  text-shadow: 1px 1px 1px rgb(179, 170, 170); /* Add a black border around the letters */
+
 }
 
-@media screen and (min-width: 768px) {
+.image-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.1); /* Set the background color and adjust the opacity */
+  z-index: 1;
+}
+
+.c 
+  {
+  margin-bottom: 50px;   
+  }
 
   #zoom-container {
     overflow: hidden;
-    width: 350px; /* Adjust the width of the zoom container */
-    height: 350px; /* Adjust the height of the zoom container */
+    width: auto; 
+    height: auto; 
     position: relative;
-    margin-left: 5px;
+    /* margin-left: 14%; */
+    margin-bottom: 3%;
   }
-  .video 
-  {
+  
+  #zoom-image {
     width: 100%;
     height: 100%;
+    transition: transform 0.5s ease;
+  
   }
+  .c2 
+  {
+    margin: 0;
+  }
+.hhh
+{
+  font-size: 15px;
+}
+
+.b 
+{
+  font-size: 15px;
+  padding: 15px 40px;
+
+}
+  .con 
+    {
+      font-size: 15px;
+      margin-top: 5%;
+    }
+    .b2
+    {
+      font-size: 15px;
+      margin-left: 0%;
+      margin-top: 0;
+      margin-bottom: 0%;
+    }
+
+  
+    .video{
+      width: 100%;
+    }
+   
+    .footer 
+    {
+      text-align: center;
+      font-size: 20px;
+    }
+
+    .f1 
+    {
+      padding-top: 20px;
+    }
+
+    a
+    {
+      text-decoration: none;
+    }
+    a:hover
+    {
+      color: #555;
+    }
+
+}
+
+@media (min-width:577px) and (max-width:768px) {
+  #image-container {
+
+    position: relative;
+    overflow: hidden;
+    height: 350px;
+
+
+  }
+
+#crop-image {
+    width: 100%;
+    height: auto;
+    display: block;
+    position: relative;
+
+    
+}
+
+
+
+#content-above {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  z-index: 2;
+  text-align: center;
+  text-shadow: 1px 1px 1px rgb(179, 170, 170); /* Add a black border around the letters */
+
+}
+
+.image-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.1); /* Set the background color and adjust the opacity */
+  z-index: 1;
+}
+
+.c 
+  {
+  margin-bottom: 50px;   
+  }
+
+  #zoom-container {
+    overflow: hidden;
+    width: auto; 
+    height: auto; 
+    position: relative;
+    /* margin-left: 14%; */
+    margin-bottom: 3%;
+  }
+  
+  #zoom-image {
+    width: 100%;
+    height: 100%;
+    transition: transform 0.5s ease;
+  
+  }
+  .c2 
+  {
+    margin-top: 0;
+  }
+
+  .con 
+    {
+      font-size: 20px;
+      margin-top: 5%;
+    }
+    .b2
+    {
+      margin-left: 0%;
+      margin-top: 0;
+      margin-bottom: 5%;
+    }
+
+  
+    .video{
+      width: 100%;
+    }
+   
+    .footer 
+    {
+      text-align: center;
+      font-size: 20px;
+    }
+}
+
+@media (min-width:769px) and (max-width:991px) {
+  #image-container {
+
+    position: relative;
+    overflow: hidden;
+    height: 500px;
+
+
+  }
+
+#crop-image {
+    width: 100%;
+    height: auto;
+    display: block;
+    position: relative;
+
+    
+}
+
+#content-above {
+  position: absolute;
+  top: 45%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  z-index: 2;
+  text-align: center;
+  text-shadow: 1px 1px 1px rgb(179, 170, 170); 
+
+}
+
+.image-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.1); 
+  z-index: 1;
+}
+
+.c 
+  {
+  margin-bottom: 50px;   
+  }
+
+
+  #zoom-container {
+    overflow: hidden;
+    width: 100%; 
+    height: 100%; 
+    position: relative;
+
+  }
+  
+  #zoom-image {
+    width: 100%;
+    height: 100%;
+    transition: transform 0.5s ease;
+    margin-bottom: 5%;
+  }
+  .c2 
+  {
+    margin-top: 0;
+  }
+
+  .con 
+    {
+      font-size: 20px;
+      margin-top: 5%;
+    }
+    .b2
+    {
+      margin-left: 0%;
+      margin-top: 0;
+      margin-bottom: 5%;
+    }
+
+  
+    .video{
+      width:100%;
+      
+    }
+   
+    .footer 
+    {
+      text-align: center;
+      font-size: 20px;
+    }
+}
+
+@media (min-width:992px) and (max-width:1200px) {
+  #image-container {
+
+    position: relative;
+    overflow: hidden;
+    height: 500px;
+
+
+  }
+
+#crop-image {
+    width: 100%;
+    height: auto;
+    display: block;
+    position: relative;
+
+    
+}
+
+#content-above {
+  position: absolute;
+  top: 45%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  z-index: 2;
+  text-align: center;
+  text-shadow: 1px 1px 1px rgb(179, 170, 170); 
+
+}
+
+.image-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.1); 
+  z-index: 1;
+}
+
+.c 
+  {
+  margin-bottom: 50px;   
+  }
+
+
+  #zoom-container {
+    overflow: hidden;
+    width: 100%; 
+    height: 100%; 
+    position: relative;
+    
+  }
+  
+  #zoom-image {
+    width: 100%;
+    height: 100%;
+    transition: transform 0.5s ease;
+    margin-bottom: 5%;
+  }
+
+  .cc 
+  {
+    font-size: 20px;
+  }
+  .b1{
+    font-size:20px ;
+  }
+
+  .c2 
+  {
+    margin-top: 0;
+  }
+
+  .con 
+    {
+      font-size: 15px;
+      margin-top: 15%;
+    }
+    .b2
+    {
+      margin-left: 5%;
+      margin-top: 0;
+    }
+
+  
+    .video{
+      width:100%;
+      
+    }
+   
+    .footer 
+    {
+      text-align: center;
+      font-size: 20px;
+    }
+}
+
+
+@media (min-width:1201px) and (max-width:1400px) {
+  #image-container {
+
+    position: relative;
+    overflow: hidden;
+    height: 600px;
+
+
+  }
+
+#crop-image {
+    width: 100%;
+    height: auto;
+    display: block;
+    position: relative;
+
+    
+}
+
+#content-above {
+  position: absolute;
+  top: 45%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  z-index: 2;
+  text-align: center;
+  text-shadow: 1px 1px 1px rgb(179, 170, 170); 
+
+}
+
+.image-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.1); 
+  z-index: 1;
+}
+
+.c 
+  {
+  margin-bottom: 50px;   
+  }
+
+
+  #zoom-container {
+    overflow: hidden;
+    width: 100%; 
+    height: 100%; 
+    position: relative;
+    
+  }
+  
+  #zoom-image {
+    width: 100%;
+    height: 100%;
+    transition: transform 0.5s ease;
+    margin-bottom: 5%;
+  }
+
+  .cc 
+  {
+    font-size: 20px;
+  }
+  .b1{
+    font-size:20px ;
+  }
+
+  .c2 
+  {
+    margin-top: 0;
+  }
+
+  .con 
+    {
+      font-size: 15px;
+      margin-top: 15%;
+    }
+    .b2
+    {
+      margin-left: 5%;
+      margin-top: 0;
+    }
+
+  
+    .video{
+      width:100%;
+      
+    }
+   
+    .footer 
+    {
+      text-align: center;
+      font-size: 20px;
+    }
 }
